# test-automation

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ozon_api_tests.yaml
api_tests/: pytest.ini
api_tests/core/: api_client.py  base_client.py  base_config.py  config.py
api_tests/fixtures/: ozon_fixtures.py
api_tests/models/ozon_models/: base.py
api_tests/tests/: conftest.py
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 2007fb6ea0abd25f.json  394d4381a2f30078.json  3b74a2ff972f3e04.json  442fdba14c6b3f96.json  611548a77cf86ea4.json  65285c01ab7ee384.json  6aec422ec855f464.json  6ee02e68b43b6327.json  7660ff0e4f3f303b.json  78b4b3b4dd11c4e8.json  7fbfe42363bd7a9.json  8320f299ca316ae3.json  8b14ef5bf2b3a02b.json  933fb4c0891e277b.json  9d022914a2f7fc1c.json  a3ea18a18cca373.json  aca2b1e262202639.json  af07a7a3819550da.json  afb02ba662d70043.json  bfab35c145a083d7.json  c03706a09642a78b.json  c7b645923953f483.json  cee917d5206c4c75.json  dfb48fb2383cbe00.json  f93855a77e8c95f1.json  fc1241403e3f7606.json  fcb62144afe2aa12.json  ff35531f71aa9886.json
data/test-cases/: 3f8971e72b954589.json  4e2b237d03563487.json  55e9b42c41e126d.json  60f512f0b369544a.json  850953d9c11a88b3.json  9c45a654111f986b.json  a72ee2891e9bbd28.json  f8e4d7eb44f5fa78.json
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
widgets/: behaviors.json  duration.json  severity.json  status-chart.json  suites.json  summary.json
(+7 files in other folders)
